# matefi

./: .gitignore  LICENSE  README.md  RUNNING.md  docker-compose.yml  readme.md
contracts/: Cargo.toml  Makefile  README.md
contracts/escrow_vault/: Cargo.toml
contracts/escrow_vault/src/: errors.rs  events.rs  lib.rs  state.rs  test.rs
contracts/escrow_vault/test_snapshots/test/: add_bonus_credits_flywheel.1.json  add_bonus_rejects_nonpositive_and_missing_record.1.json  gated_functions_reject_unauthorized_callers.1.json  initialize_only_once.1.json  record_deposit_both_players.1.json  record_deposit_rejects_double_deposit_by_player_a.1.json  record_deposit_rejects_mismatched_amount.1.json  record_deposit_rejects_third_player.1.json  refund_returns_deposit_on_cancel.1.json  release_draw_refunds_deposits_and_sends_bonus_to_treasury.1.json  release_pays_winner_and_treasury_exactly.1.json  release_rejects_double_release_and_overdraw.1.json
contracts/match_registry/: Cargo.toml
contracts/match_registry/src/: errors.rs  events.rs  lib.rs  state.rs  test.rs
contracts/match_registry/test_snapshots/test/: cancel_match_refunds_player_a.1.json  cancel_match_rejected_for_non_player_a.1.json  complete_match_allowed_when_disputed.1.json  complete_match_only_callable_by_settlement.1.json  create_match_increments_counter.1.json  create_match_rejected_below_min_bet.1.json  create_match_returns_match_id_and_transfers_usdc.1.json  get_match_rejects_unknown_match_id.1.json  join_match_activates_match_and_opens_market.1.json  join_match_rejected_for_already_active_match.1.json  set_disputed_rejects_double_dispute.1.json  set_disputed_requires_pending_finalization.1.json  set_pending_finalization_requires_active.1.json
contracts/oracle_gateway/: Cargo.toml
contracts/oracle_gateway/src/: errors.rs  events.rs  lib.rs  state.rs  test.rs
contracts/prediction_pool/: Cargo.toml
contracts/prediction_pool/src/: errors.rs  events.rs  lib.rs  state.rs  test.rs
contracts/settlement/: Cargo.toml
contracts/settlement/src/: errors.rs  events.rs  lib.rs  state.rs  test.rs
(+215 files in other folders)
