[package]
name = "settlement"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
escrow_vault = { path = "../escrow_vault" }
prediction_pool = { path = "../prediction_pool" }
match_registry = { path = "../match_registry" }
oracle_gateway = { path = "../oracle_gateway" }
